changed linked in link

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           developer.
         </p>
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/mansang-jo-383510147/">
+          <a href="https://www.linkedin.com/in/mansang-jo">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a href="https://github.com/MannyJo">
