--- a/index.html
+++ b/index.html
@@ -257,6 +257,16 @@
           </div>
         </div>
 
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Plyable</h3>
+            <div class="subheading mb-3">Full Stack</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <a class="btn btn-primary" href="https://manny-plyable.herokuapp.com">Go</a>
+          </div>
+        </div>
+
       </div>
     </section>
 
