Add more infomation about projects

--- a/index.html
+++ b/index.html
@@ -241,6 +241,10 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Time Tracker</h3>
             <div class="subheading mb-3">Full Stack</div>
+            <div class="subheading mb-3">Technologies I used</div>
+            <p class="lead mb-5">
+              AngularJS, Node.js, Express, Material-UI, PostgreSQL, HTML, CSS
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <a class="btn btn-primary" href="https://ms-time-tracker.herokuapp.com">Go</a>
@@ -251,6 +255,10 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Party Pooper Planner</h3>
             <div class="subheading mb-3">Full Stack</div>
+            <div class="subheading mb-3">Technologies I used</div>
+            <p class="lead mb-5">
+              React, Node.js, Express, Passport, HTML, CSS, Material-UI, JavaScript, PostgreSQL, Google Map API, Google Gmail API, Chart.js
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <a class="btn btn-primary" href="https://party-pooper-planner.herokuapp.com">Go</a>
@@ -261,6 +269,10 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Plyable</h3>
             <div class="subheading mb-3">Full Stack</div>
+            <div class="subheading mb-3">Technologies I used</div>
+            <p class="lead mb-5">
+                React, Node.js, Express, Passport, HTML, CSS, Material-UI, JavaScript, PostgreSQL, React-csv, Node Mailer, Node Scheduler, Chart.js
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <a class="btn btn-primary" href="https://manny-plyable.herokuapp.com">Go</a>
