--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <a class="btn btn-primary" href="https://party-pooper-planner.herokuapp.com">Go</a>
+            <a class="btn btn-primary" href="https://party-pooper-planner.herokuapp.com">Site</a><br/>
+            <a class="btn btn-primary" href="https://github.com/MannyJo/ppp-solo-project">GitHub</a><br/>
           </div>
         </div>
 
@@ -275,7 +276,23 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <a class="btn btn-primary" href="https://manny-plyable.herokuapp.com">Go</a>
+            <a class="btn btn-primary" href="https://manny-plyable.herokuapp.com">Site</a>
+            <a class="btn btn-primary" href="https://github.com/MannyJo/plyable">GitHub</a>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">To-Do List</h3>
+            <div class="subheading mb-3">Full Stack</div>
+            <div class="subheading mb-3">Technologies I used</div>
+            <p class="lead mb-5">
+                AngularJS, Angular Material, Java, Spring Boot, MongoDB
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <a class="btn btn-primary" href="https://manny-todo.herokuapp.com">Site</a>
+            <a class="btn btn-primary" href="https://github.com/MannyJo/TodoList">GitHub</a>
           </div>
         </div>
 
