--- a/index.html
+++ b/index.html
@@ -227,6 +227,12 @@
           <li>
             <i class="fa-li fa fa-check"></i>
             PostgreSQL</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Java</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Spring Boot</li>
         </ul>
       </div>
     </section>
@@ -247,7 +253,8 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <a class="btn btn-primary" href="https://ms-time-tracker.herokuapp.com">Go</a>
+            <a class="btn btn-primary" href="https://ms-time-tracker.herokuapp.com">Site</a>
+            <a class="btn btn-primary" href="https://github.com/MannyJo/time-tracker">GitHub</a>
           </div>
         </div>
 
@@ -261,8 +268,8 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <a class="btn btn-primary" href="https://party-pooper-planner.herokuapp.com">Site</a><br/>
-            <a class="btn btn-primary" href="https://github.com/MannyJo/ppp-solo-project">GitHub</a><br/>
+            <a class="btn btn-primary" href="https://party-pooper-planner.herokuapp.com">Site</a>
+            <a class="btn btn-primary" href="https://github.com/MannyJo/ppp-solo-project">GitHub</a>
           </div>
         </div>
 
@@ -287,7 +294,7 @@
             <div class="subheading mb-3">Full Stack</div>
             <div class="subheading mb-3">Technologies I used</div>
             <p class="lead mb-5">
-                AngularJS, Angular Material, Java, Spring Boot, MongoDB
+                AngularJS, Angular Material, Java, Spring Boot, MongoDB, HTML, CSS
             </p>
           </div>
           <div class="resume-date text-md-right">
