--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2018 - Present</span>
+            <span class="text-primary">July 2018 - November 2018</span>
           </div>
         </div>
 
