Add access user info

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div>Computer Science</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2006 - February 2012</span>
+            <span class="text-primary">March 2006 - February 2013</span>
           </div>
         </div>
 
@@ -266,6 +266,21 @@
             <p class="lead mb-5">
               React, Node.js, Express, Passport, HTML, CSS, Material-UI, JavaScript, PostgreSQL, Google Map API, Google Gmail API, Chart.js
             </p>
+            <div class="subheading mb-3">Access Info</div>
+            <p class="lead">
+              <div>
+                  User Account<br />
+                  <ul>
+                    <li>ID : jomansang@gmail.com</li>
+                    <li>PW : user123</li>
+                  </ul>
+                  Admin Account<br />
+                  <ul>
+                    <li>ID : mannyjoking@gmail.com</li>
+                    <li>PW : admin123</li>
+                  </ul>
+              </div>
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <a class="btn btn-primary" href="https://party-pooper-planner.herokuapp.com">Site</a>
@@ -280,6 +295,26 @@
             <div class="subheading mb-3">Technologies I used</div>
             <p class="lead mb-5">
                 React, Node.js, Express, Passport, HTML, CSS, Material-UI, JavaScript, PostgreSQL, React-csv, Node Mailer, Node Scheduler, Chart.js
+            </p>
+            <div class="subheading mb-3">Access Info</div>
+            <p class="lead">
+              <div>
+                  Admin<br />
+                  <ul>
+                    <li>ID : Admin@plyable.io</li>
+                    <li>PW : 123456</li>
+                  </ul>
+                  Manager<br />
+                  <ul>
+                    <li>ID : Manny.Jo@flexsystems.com</li>
+                    <li>PW : 123456</li>
+                  </ul>
+                  User<br />
+                  <ul>
+                    <li>ID : Hailee.Miu@flexsystems.com</li>
+                    <li>PW : 123456</li>
+                  </ul>
+              </div>
             </p>
           </div>
           <div class="resume-date text-md-right">
