--- a/index.html
+++ b/index.html
@@ -304,12 +304,12 @@
                     <li>ID : Admin@plyable.io</li>
                     <li>PW : 123456</li>
                   </ul>
-                  Manager<br />
+                  Manager(Mobile Friendly)<br />
                   <ul>
                     <li>ID : Manny.Jo@flexsystems.com</li>
                     <li>PW : 123456</li>
                   </ul>
-                  User<br />
+                  User(Mobile Friendly)<br />
                   <ul>
                     <li>ID : Hailee.Miu@flexsystems.com</li>
                     <li>PW : 123456</li>
