--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/resume.min.css" rel="stylesheet">
+  <link href="css/resume.css" rel="stylesheet">
 
 </head>
 
@@ -64,7 +64,7 @@
         <h1 class="mb-0">Mansang
           <span class="text-primary">Jo</span>
         </h1>
-        <div class="subheading mb-5">1305 Madison Street · St. Paul, MN 55116 · (952) 567-4631 ·
+        <div class="subheading mb-5">St. Paul, MN 55116 · (952) 567-4631 ·
           <a href="mailto:name@email.com">jomansang@gmail.com</a>
         </div>
         <p class="lead mb-5">
