--- a/index.html
+++ b/index.html
@@ -95,10 +95,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
+            <h3 class="mb-0">Account Management Developer</h3>
+            <div class="subheading mb-3">Smart Data Solutions</div>
+            <p>
+              Working at Smart Data Solutions As an Account Management Developer using Java and MySQL.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">February 2019 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
             <h3 class="mb-0">Full Stack Developer</h3>
             <div class="subheading mb-3">Prime Digital Academy</div>
             <p>
-              Currently attending 20-week intensive coding workshop to develop my portfolio. Developing and
+              Attending 20-week intensive coding workshop to develop my portfolio. Developing and
               testing application for my solo project utilizing skills learned and developed at Prime Academy.
             </p>
           </div>
