--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h3 class="mb-0">Account Management Developer</h3>
             <div class="subheading mb-3">Smart Data Solutions</div>
             <p>
-              Working at Smart Data Solutions As an Account Management Developer using Java and MySQL.
+              Working at Smart Data Solutions as an Account Management Developer using Java and MySQL.
             </p>
           </div>
           <div class="resume-date text-md-right">
