Update my information

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h1 class="mb-0">Mansang
           <span class="text-primary">Jo</span>
         </h1>
-        <div class="subheading mb-5">St. Paul, MN 55116 · (952) 567-4631 ·
+        <div class="subheading mb-5">St. Paul, MN 55116 ·
           <a href="mailto:name@email.com">jomansang@gmail.com</a>
         </div>
         <p class="lead mb-5">
@@ -95,10 +95,10 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Account Management Developer</h3>
+            <h3 class="mb-0">Account Management Programmer</h3>
             <div class="subheading mb-3">Smart Data Solutions</div>
             <p>
-              Working at Smart Data Solutions as an Account Management Developer using Java and MySQL.
+              Working at Smart Data Solutions as an Account Management Programmer using Java and MySQL.
             </p>
           </div>
           <div class="resume-date text-md-right">
