--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">February 2019 - Present</span>
+            <span class="text-primary">February 2019 - July 2019</span>
           </div>
         </div>
 
@@ -255,6 +255,21 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
       <div class="my-auto">
         <h2 class="mb-5">Projects</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Family Bowling Scheduler(In development)</h3>
+            <div class="subheading mb-3">Full Stack</div>
+            <div class="subheading mb-3">Technologies I used</div>
+            <p class="lead mb-5">
+              React, Node.js, PostgreSQL, Gmail API, Material-UI, ...
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <!-- <a class="btn btn-primary" href="https://ms-time-tracker.herokuapp.com">Site</a> -->
+            <a class="btn btn-primary" href="https://github.com/MannyJo/kingawaybowl">GitHub</a>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
