--- a/index.html
+++ b/index.html
@@ -246,6 +246,9 @@
           <li>
             <i class="fa-li fa fa-check"></i>
             Spring Boot</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            SASS &amp; SCSS</li>
         </ul>
       </div>
     </section>
@@ -255,6 +258,21 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
       <div class="my-auto">
         <h2 class="mb-5">Projects</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">My ChitChat</h3>
+            <div class="subheading mb-3">Full Stack</div>
+            <div class="subheading mb-3">Technologies I used</div>
+            <p class="lead mb-5">
+              React, Node.js, Socket.io, Express, SASS/SCSS
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <a class="btn btn-primary" href="https://loving-booth-69db02.netlify.com/">Site</a>
+            <a class="btn btn-primary" href="https://github.com/MannyJo/chitchat">GitHub</a>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
@@ -292,21 +310,22 @@
             <div class="subheading mb-3">Full Stack</div>
             <div class="subheading mb-3">Technologies I used</div>
             <p class="lead mb-5">
-              React, Node.js, Express, Passport, HTML, CSS, Material-UI, JavaScript, PostgreSQL, Google Map API, Google Gmail API, Chart.js
+              React, Node.js, Express, Passport, HTML, CSS, Material-UI, JavaScript, PostgreSQL, Google Map API, Google
+              Gmail API, Chart.js
             </p>
             <div class="subheading mb-3">Access Info</div>
             <p class="lead">
               <div>
-                  User Account<br />
-                  <ul>
-                    <li>ID : jomansang@gmail.com</li>
-                    <li>PW : user123</li>
-                  </ul>
-                  Admin Account<br />
-                  <ul>
-                    <li>ID : mannyjoking@gmail.com</li>
-                    <li>PW : admin123</li>
-                  </ul>
+                User Account<br />
+                <ul>
+                  <li>ID : jomansang@gmail.com</li>
+                  <li>PW : user123</li>
+                </ul>
+                Admin Account<br />
+                <ul>
+                  <li>ID : mannyjoking@gmail.com</li>
+                  <li>PW : admin123</li>
+                </ul>
               </div>
             </p>
           </div>
@@ -322,26 +341,27 @@
             <div class="subheading mb-3">Full Stack</div>
             <div class="subheading mb-3">Technologies I used</div>
             <p class="lead mb-5">
-                React, Node.js, Express, Passport, HTML, CSS, Material-UI, JavaScript, PostgreSQL, React-csv, Node Mailer, Node Scheduler, Chart.js
+              React, Node.js, Express, Passport, HTML, CSS, Material-UI, JavaScript, PostgreSQL, React-csv, Node Mailer,
+              Node Scheduler, Chart.js
             </p>
             <div class="subheading mb-3">Access Info</div>
             <p class="lead">
               <div>
-                  Admin<br />
-                  <ul>
-                    <li>ID : Admin@plyable.io</li>
-                    <li>PW : 123456</li>
-                  </ul>
-                  Manager(Mobile Friendly)<br />
-                  <ul>
-                    <li>ID : Manny.Jo@flexsystems.com</li>
-                    <li>PW : 123456</li>
-                  </ul>
-                  User(Mobile Friendly)<br />
-                  <ul>
-                    <li>ID : Hailee.Miu@flexsystems.com</li>
-                    <li>PW : 123456</li>
-                  </ul>
+                Admin<br />
+                <ul>
+                  <li>ID : Admin@plyable.io</li>
+                  <li>PW : 123456</li>
+                </ul>
+                Manager(Mobile Friendly)<br />
+                <ul>
+                  <li>ID : Manny.Jo@flexsystems.com</li>
+                  <li>PW : 123456</li>
+                </ul>
+                User(Mobile Friendly)<br />
+                <ul>
+                  <li>ID : Hailee.Miu@flexsystems.com</li>
+                  <li>PW : 123456</li>
+                </ul>
               </div>
             </p>
           </div>
@@ -357,7 +377,7 @@
             <div class="subheading mb-3">Full Stack</div>
             <div class="subheading mb-3">Technologies I used</div>
             <p class="lead mb-5">
-                AngularJS, Angular Material, Java, Spring Boot, MongoDB, HTML, CSS
+              AngularJS, Angular Material, Java, Spring Boot, MongoDB, HTML, CSS
             </p>
           </div>
           <div class="resume-date text-md-right">
