Add bowling url

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <!-- <a class="btn btn-primary" href="https://ms-time-tracker.herokuapp.com">Site</a> -->
+            <a class="btn btn-primary" href="https://kingaway-bowling.herokuapp.com/">Site</a>
             <a class="btn btn-primary" href="https://github.com/MannyJo/kingawaybowl">GitHub</a>
           </div>
         </div>
