--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h3 class="mb-0">Account Management Programmer</h3>
             <div class="subheading mb-3">Smart Data Solutions</div>
             <p>
-              Working at Smart Data Solutions as an Account Management Programmer using Java and MySQL.
+              Working at Smart Data Solutions as an Account Management Programmer with Java, JPA and MySQL.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -122,28 +122,16 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Back-end Developer</h3>
+            <h3 class="mb-0">Software Developer</h3>
             <div class="subheading mb-3">Mobile C&C</div>
             <p>
-              Managed the server side of several apps from development teams using Java based Spring
+              Managed the server side of several apps from service management and development team using Java based
+              Spring
               Framework software system implemented specifically by this company.
             </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2013 - July 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Soldier - Telecommunications</h3>
-            <div class="subheading mb-3">Republic of Korea Army</div>
-            <p>
-              Served two-year mandatory military service for the Republic of Korea.
-            </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">April 2007 - March 2009</span>
           </div>
         </div>
 
