--- a/index.html
+++ b/index.html
@@ -249,6 +249,21 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
+            <h3 class="mb-0">Flip it card game</h3>
+            <div class="subheading mb-3">Front-end</div>
+            <div class="subheading mb-3">Technologies I used</div>
+            <p class="lead mb-5">
+              React, React Hook, CSS, SASS/SCSS
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <a class="btn btn-primary" href="https://objective-shirley-ea6162.netlify.com/">Site</a>
+            <a class="btn btn-primary" href="https://github.com/MannyJo/flip-card-game">GitHub</a>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
             <h3 class="mb-0">My ChitChat</h3>
             <div class="subheading mb-3">Full Stack</div>
             <div class="subheading mb-3">Technologies I used</div>
