--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
@@ -85,6 +88,14 @@
           </a>
         </div>
       </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex d-column" id="resume">
+      <object class="resumeView" data="Resume_Mansang_Jo.pdf" type="application/pdf" style="width: 100%; height: 80vh;">
+        alt: <a href="Resume_Mansang_Jo.pdf">test.pdf</a>
+      </object>
     </section>
 
     <hr class="m-0">
