--- a/index.html
+++ b/index.html
@@ -248,6 +248,12 @@
           <li>
             <i class="fa-li fa fa-check"></i>
             SASS &amp; SCSS</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Python</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Python Django</li>
         </ul>
       </div>
     </section>
@@ -260,11 +266,26 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
+            <h3 class="mb-0">My Movie</h3>
+            <div class="subheading mb-3">Fullstack</div>
+            <div class="subheading mb-3">Technologies I used</div>
+            <p class="lead mb-5">
+              React, React Hook, HTML/CSS, SASS/SCSS, Python, Django, SQLite
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <a class="btn btn-primary" href="https://ma-movie-page.herokuapp.com/">Site</a>
+            <a class="btn btn-primary" href="https://github.com/MannyJo/movie-app-all">GitHub</a>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
             <h3 class="mb-0">Flip it card game</h3>
             <div class="subheading mb-3">Front-end</div>
             <div class="subheading mb-3">Technologies I used</div>
             <p class="lead mb-5">
-              React, React Hook, CSS, SASS/SCSS
+              React, React Hook, HTML/CSS, SASS/SCSS
             </p>
           </div>
           <div class="resume-date text-md-right">
