--- a/index.html
+++ b/index.html
@@ -266,6 +266,22 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
+            <h3 class="mb-0">Storage Management</h3>
+            <div class="subheading mb-3">Fullstack</div>
+            <div class="subheading mb-3">Technologies I used</div>
+            <p class="lead mb-5">
+              React, React Hook, HTML/CSS, SASS/SCSS, Java, Spring boot, JWT
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <a class="btn btn-primary" href="https://storage-management.netlify.app/">Site</a>
+            <a class="btn btn-primary" href="https://github.com/MannyJo/manny-mgmt-client">GitHub(Client)</a>
+            <a class="btn btn-primary" href="https://github.com/MannyJo/manny-mgmt-server">GitHub(Server)</a>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
             <h3 class="mb-0">My Movie</h3>
             <div class="subheading mb-3">Fullstack</div>
             <div class="subheading mb-3">Technologies I used</div>
