--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Storage Management</h3>
-            <div class="subheading mb-3">Fullstack</div>
+            <div class="subheading mb-3">Fullstack(Mobile/Web)</div>
             <div class="subheading mb-3">Technologies I used</div>
             <p class="lead mb-5">
               React, React Hook, HTML/CSS, SASS/SCSS, Java, Spring boot, JWT
