Add new project

--- a/index.html
+++ b/index.html
@@ -266,6 +266,25 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
+            <h3 class="mb-0">Calculator wiht log</h3>
+            <div class="subheading mb-3">Fullstack(Mobile/Web)</div>
+            <div class="subheading mb-3">Technologies I used</div>
+            <p class="lead mb-5">
+              React, React Hook, HTML/CSS, Node.js, Socket.io
+            </p>
+            <div class="subheading mb-3">Description</div>
+            <p class="lead mb-5">
+              Create a web app (using any programming languages) which logs calculations as they happen and shares those calculations with everyone connected to the website. For example, user A and user B go to your site at the same time. User A calculates "5 + 5", which equals "10". This is logged below the calculator as "5 + 5 = 10". User B is updated about this calculation right after user A posts it. Now, user B calculates "3 x 4".This calculates to “12” and displays "3 x 4=12" right below the prior calculation. User A sees this update immediately after user B posts it. Results should remain between sessions. Only show the last 10 calculations descending from most recent to oldest.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <a class="btn btn-primary" href="https://calculator-with-log.netlify.app/">Site</a>
+            <a class="btn btn-primary" href="https://github.com/MannyJo/calculator-with-log">GitHub</a>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
             <h3 class="mb-0">Storage Management</h3>
             <div class="subheading mb-3">Fullstack(Mobile/Web)</div>
             <div class="subheading mb-3">Technologies I used</div>
