Updated with new information

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Mansang Jo</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="profile">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -71,13 +71,12 @@
           <a href="mailto:name@email.com">jomansang@gmail.com</a>
         </div>
         <p class="lead mb-5">
-          I am Mansang Jo, an enthusiastic, self-motivated, and confident software developer residing in St. Paul, MN.
+          I am Mansang Jo, an enthusiastic, self-motivated, and confident software developer residing in Apple Valley, MN.
           After graduating from University in South Korea with a degree in computer science, I worked for four years at
           an IT company in the Gangnam area of the nation's capital, Seoul.
           Upon moving to the United States in August of 2017, I attended an intensive English language academy for five
-          months and then started a rigorous coding program at Prime Digital Academy in Minneapolis.
-          I am now pursuing positions within companies here in the Twin Cities to build my career as a software
-          developer.
+          months and then started a rigorous coding program at Prime Digital Academy in Minneapolis to understand and learn how to communicate with other developers or co-workers in the USA.
+          Now, I'm working remotely as a software developer.
         </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/mansang-jo">
@@ -106,10 +105,49 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
+            <h3 class="mb-0">Software Developer (Remote)</h3>
+            <div class="subheading mb-3">Line 45</div>
+            <p>
+              Create information-based web applications using Geographic Information System(GIS), Python, Vue, TypeScript, JavaScript, C#, etc.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">March 2021 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Stocker</h3>
+            <div class="subheading mb-3">Target</div>
+            <p>
+              Stocked products in a warehouse.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2020 - February 2021</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Sortation Associate</h3>
+            <div class="subheading mb-3">Amazon</div>
+            <p>
+              Moved and Sorted incoming packages to pallets and gaylord boxes.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2020 - October 2020</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
             <h3 class="mb-0">Account Management Programmer</h3>
             <div class="subheading mb-3">Smart Data Solutions</div>
             <p>
-              Working at Smart Data Solutions as an Account Management Programmer with Java, JPA and MySQL.
+              Pulled support tickets and helped troubleshoot issues presented by clients. Upon client approval of a SOW (statement of work), developed, tested and executed new logics/code per their request.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -122,8 +160,7 @@
             <h3 class="mb-0">Full Stack Developer</h3>
             <div class="subheading mb-3">Prime Digital Academy</div>
             <p>
-              Attending 20-week intensive coding workshop to develop my portfolio. Developing and
-              testing application for my solo project utilizing skills learned and developed at Prime Academy.
+              Attending 20-week intensive coding workshop to develop my portfolio. Developing and testing application for my solo project utilizing skills learned and developed at Prime Academy.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -136,9 +173,7 @@
             <h3 class="mb-0">Software Developer</h3>
             <div class="subheading mb-3">Mobile C&C</div>
             <p>
-              Managed the server side of several apps from service management and development team using Java based
-              Spring
-              Framework software system implemented specifically by this company.
+              Managed the server side of several apps from development teams using Java based Spring Framework software system implemented specifically by this company. Created numerous server side database structures that are still being used by the company.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -187,73 +222,50 @@
         <h2 class="mb-5">Skills</h2>
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
-        </ul>
 
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-check"></i>
-            HTML &amp; CSS</li>
+            <i class="fa-li fa fa-check"></i> HTML &amp; CSS
+          </li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            JavaScript</li>
+            <i class="fa-li fa fa-check"></i> JavaScript
+          </li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            jQuery</li>
+            <i class="fa-li fa fa-check"></i> jQuery
+          </li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            AngularJS</li>
+            <i class="fa-li fa fa-check"></i> AngularJS
+          </li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            React</li>
+            <i class="fa-li fa fa-check"></i> React
+          </li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Node.js</li>
+            <i class="fa-li fa fa-check"></i> Node.js
+          </li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Express</li>
+            <i class="fa-li fa fa-check"></i> Express
+          </li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            MongoDB</li>
+            <i class="fa-li fa fa-check"></i> MongoDB
+          </li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            PostgreSQL</li>
+            <i class="fa-li fa fa-check"></i> PostgreSQL
+          </li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Java</li>
+            <i class="fa-li fa fa-check"></i> Java
+          </li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Spring Boot</li>
+            <i class="fa-li fa fa-check"></i> Spring Boot
+          </li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            SASS &amp; SCSS</li>
+            <i class="fa-li fa fa-check"></i> SASS &amp; SCSS
+          </li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Python</li>
+            <i class="fa-li fa fa-check"></i> Python
+          </li>
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Python Django</li>
+            <i class="fa-li fa fa-check"></i> Python Django
+          </li>
         </ul>
       </div>
     </section>
